--- a/_publications/2024-12-17-research1.md
+++ b/_publications/2024-12-17-research1.md
@@ -4,6 +4,7 @@ excerpt: "This study presents a transfer learning-based approach to classify GI 
 collection: publications
 layout: single
 permalink: /publications/gi-transfer-learning/
+teaser: /assets/images/research01.png
 date: 2024-02-01
 read_time: true
 author_profile: false
