--- a/_publications/2024-12-17-research1.md
+++ b/_publications/2024-12-17-research1.md
@@ -5,7 +5,7 @@ collection: publications
 layout: single
 permalink: /publications/gi-transfer-learning/
 header:
-    teaser: /assets/images/research01.png
+    teaser: /assets/images/r1.png
 date: 2024-02-01
 read_time: true
 author_profile: false
