--- a/_publications/2024-12-19-peerj-cs2587.md
+++ b/_publications/2024-12-19-peerj-cs2587.md
@@ -1,15 +1,15 @@
 ---
 title: "A Two-Phase Transfer Learning Framework for Gastrointestinal Diseases Classification"
 excerpt: "This study presents a transfer learning framework to classify GI diseases from endoscopic images using deep learning models like InceptionResNetV2, Xception, and VGG16."
-collection: publications
 layout: single
+collection: publications
 permalink: /publications/peerj-cs.2587/
+date: 2024-12-19
+author_profile: true
+doi: "10.7717/peerj-cs.2587"
 header:
     teaser: /assets/images/teaser-r1.png
-date: 2024-12-19
-author_profile: false
-doi: "10.7717/peerj-cs.2587"
----
+--- 
 
 ### 🧠 Abstract
 Gastrointestinal (GI) disorders are common and often debilitating health issues that affect a significant portion of the population. Recent advancements in artificial intelligence, particularly computer vision algorithms, have shown great potential in detecting and classifying medical images. These algorithms utilize deep convolutional neural network architectures to learn complex spatial features in images and make predictions for similar unseen images. The proposed study aims to assist gastroenterologists in making more efficient and accurate diagnoses of GI patients by utilizing its two-phase transfer learning framework to identify GI diseases from endoscopic images. Three pre-trained image classification models, namely Xception, InceptionResNetV2, and VGG16, are fine-tuned on publicly available datasets of annotated endoscopic images of the GI tract. Additionally, two custom convolutional neural networks are constructed and fully trained for comparative analysis of their performance. Four different classification tasks are examined based on the endoscopic image categories. The proposed architecture employing InceptionResNetV2 achieves the most consistent and generalized performance across most classification tasks, yielding accuracy scores of 85.7% for general classification of GI tract (eight-category classification), 97.6% for three-diseases classification, 99.5% for polyp identification (binary classification), and 74.2% for binary classification of esophagitis severity on unseen endoscopic images. The results indicate the effectiveness of the two-phase transfer learning framework for clinical use to enhance the identification of GI diseases, aiding in their early diagnosis and treatment.
