--- a/_publications/2024-12-19-peerj-cs2587.md
+++ b/_publications/2024-12-19-peerj-cs2587.md
@@ -6,6 +6,7 @@ collection: publications
 permalink: /publications/peerj-cs.2587/
 date: 2024-12-19
 author_profile: true
+show_pagination: false
 doi: "10.7717/peerj-cs.2587"
 header:
     teaser: /assets/images/teaser-r1.png
