--- a/_publications/2024-12-19-peerj-cs2587.md
+++ b/_publications/2024-12-19-peerj-cs2587.md
@@ -19,7 +19,4 @@ Gastrointestinal (GI) disorders are common and often debilitating health issues 
 [PeerJ Computer Science – DOI: 10.7717/peerj-cs.2587](https://doi.org/10.7717/peerj-cs.2587)
 
 ### Cite 📄
-Ahmed Ali, Arshad Iqbal, Sohail Khan, Naveed Ahmad, Sajid Shah. 2024.  
-*A Two-Phase Transfer Learning Framework for Gastrointestinal Diseases Classification*.  
-PeerJ Computer Science, 10:e2587.  
-[https://doi.org/10.7717/peerj-cs.2587](https://doi.org/10.7717/peerj-cs.2587)
+Ahmed Ali, Arshad Iqbal, Sohail Khan, Naveed Ahmad, Sajid Shah. 2024. *A Two-Phase Transfer Learning Framework for Gastrointestinal Diseases Classification*. PeerJ Computer Science, 10:e2587. [https://doi.org/10.7717/peerj-cs.2587](https://doi.org/10.7717/peerj-cs.2587)
