--- a/_publications/2024-12-19-peerj-cs2587.md
+++ b/_publications/2024-12-19-peerj-cs2587.md
@@ -1,5 +1,5 @@
 ---
-title: "A Two-Phase Transfer Learning Framework for Gastrointestinal Diseases Classification"
+title: "A two-phase transfer learning framework for gastrointestinal diseases classification"
 excerpt: "This study presents a transfer learning framework to classify GI diseases from endoscopic images using deep learning models like InceptionResNetV2, Xception, and VGG16."
 layout: single
 collection: publications
