--- a/_publications/2024-12-19-peerj-cs2587.md
+++ b/_publications/2024-12-19-peerj-cs2587.md
@@ -1,6 +1,6 @@
 ---
 title: "A two-phase transfer learning framework for gastrointestinal diseases classification"
-excerpt: "This study presents a transfer learning framework to classify GI diseases from endoscopic images using deep learning models like InceptionResNetV2, Xception, and VGG16."
+excerpt: "Gastrointestinal (GI) disorders are common and often debilitating health issues that affect a significant portion of the population. Recent advancements in artificial intelligence..."
 layout: single
 collection: publications
 permalink: /publications/peerj-cs.2587/
