--- a/_publications/2024-12-19-peerj-cs2587.md
+++ b/_publications/2024-12-19-peerj-cs2587.md
@@ -7,6 +7,7 @@ permalink: /publications/peerj-cs.2587/
 date: 2024-12-19
 author_profile: true
 show_pagination: false
+toc: true
 doi: "10.7717/peerj-cs.2587"
 header:
     teaser: /assets/images/teaser-r1.png
